linkedeye-itsm-platform-backend/k8s/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: incident-linkedeye-itsm
  labels:
    app: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      imagePullSecrets:
      - name: gitlab-registry-auth
      containers:
        - name: celery-worker
          image: registry.gitlab.com/rajkumar.finspot/finspot-le-dev/linkedeye-backend:v1.0.0
          command:
            [
              "celery",
              "-A",
              "app.core.celery_app",
              "worker",
              "--loglevel=info",
              "--concurrency=4",
              "--queues=default,incidents,notifications,reports,sync",
            ]
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: logs
              mountPath: /app/logs
      volumes:
        - name: logs
          emptyDir: {}
